--- a/ConfigurationFiles/deployment.yaml
+++ b/ConfigurationFiles/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: nginx
+        image: gauris17/netflix:latest
         ports:
         - containerPort: 3000
